TEST_PROGRAMS/VALID/05/multiple_unary_minus_with_paren.go
package main

func main() {
  x := 10
  println(-(-x))
  println(-(-(-x)))
}
