TEST_PROGRAMS/INVALID/09/blank_selector.go
package blank_funcselector

func main() {
    a := _.test
}
